Added site.html to site.yml.

--- a/site.yml
+++ b/site.yml
@@ -29,6 +29,15 @@
         - libapache2-mod-php
     when: ansible_distribution == "Ubuntu"
 
+  - name: copy html file for site
+    tags: apache,ubuntu
+    ansible.builtin.copy:
+      src: default_site.html
+      dest: /var/www/html/index.html
+      owner: root
+      group: root
+      mode: 0644
+
 - hosts: db_servers
   tags: db,fedora
   become: true
